--- a/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
+++ b/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
@@ -123,7 +123,7 @@ O Ich werde mich an_______________ wenden, um dieses Problem zu lösen, weil____
 
 =======================================================================================================================================
 
-III Führungsaufgaben
+IV Führungsaufgaben
 
 Bewerten Sie bitte von 1(auf jeden Fall) bis 6(gar nicht), welche der folgenden Aufgabengebiete ein Dozent gegenüber einem Studenten 
 zu erfüllen hat:
@@ -165,7 +165,7 @@ O Sonstiges, z.B____________________________________
 
 =======================================================================================================================================
 
-IV Leistungsbewertung
+V Leistungsbewertung
 
 Welche Form der Lösungsbewertung ist für Sie am besten geeignet?
 O e-Klausur
