Verbesserung II Lehrinhalte
Nach Kommentaren verbessert und auf persönliche Bitte durch Kunde im Meeting eine Frage zur Hausarbeit eingestellt

--- a/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
+++ b/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
@@ -28,7 +28,7 @@ O 2 mal/Woche oder öfter   	  O ca. 1 mal pro Woche         	O 1-2 mal/Monat od
 
 II Lehrinhalte:
 
- Wünschst Du dir eine Plattform für (anonyme) Vorschläge oder Kritiken zu deinen Dozenten? Wenn ja, welche Funktionen soll diese bieten?    
+ Wünschen Sie sich eine Plattform für (anonyme) Vorschläge und Kritik schon während des Semesters, um von eventuellen Änderungen schon selbst zu profitieren?    
 O Meldungen bleiben am besten anonym
 O Die Reaktion von den Dozenten auf das Feedback wird gezeigt, z.B. Zurückschreibung, Rechtfertigung etc.
 O Abstimmungsfunktion, z.B du initiatiierst eine Abstimmung für eine Bewegung, um den Dozenten auf eine Änderung aufmerksam zu machen.
@@ -37,11 +37,22 @@ O Sonstiges, z.B____________________________________
 Wie empfangen Sie Ihre Lehrinhalte bevorzugt?
 O Online
 O In Vorlesungen
-O im Selbststudium /* für Dozent umformulieren
+O im Selbststudium /* für Dozent wird der Fragebogen umformuliert
+O als Hausarbeit
 O abhängig vom Fach
-O andere: ...
-Begründen Sie Ihre Wahl bitte kurz und stichwortartig:
-_______________________________________________________________________________________________________________________________________
+
+Welche Eigenschaften muss eine Hausarbeit Ihrer Meinung nach haben, um einen maximalen Lernerfolg zu erzielen?
+O etwas schwerer als die Klausur
+O etwas leichter als die Klausur
+O geht über das eigene Können hinaus
+O wird betreut
+O ist vom Dozent gut dokumentiert
+O wird als Studienleitung erwartet
+O erfordert Transferleistung und viel Denkaufwand
+O ist wenig aufwändig und folgt dem Vorlesungsschema
+O eine Lösung wird mit der Übung bereitgestellt
+O eine Lösung wird nach der Übung bereitgestellt
+O eine Lösung wird nach der Übung mit dem Dozenten besprochen
 
 =======================================================================================================================================
 
