III Planung verbessert

--- a/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
+++ b/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
@@ -58,35 +58,44 @@ O eine Lösung wird nach der Übung mit dem Dozenten besprochen
 
 III Planug
 
-Bewerten Sie auf einer Skala von 1 (sehr) - 6(gar nicht), welchen Kommunikationsweg Sie bevorzugen, um sich mit Dozenten auszutauschen?
+Bewerten Sie auf einer Skala von 1 (sehr) - 6(gar nicht), welchen Kommunikationsweg Sie bevorzugen, mit Dozenten zu kommunizieren?
 O Forum
 O Email
 O In der Vorlesung
 O Durch Aushang am Raum
 O Durch Aushang an zentraler Stelle
 O Im Einzelgespräch
+O Im Gruppengespräch
+O Chat
+O Telefon
 O andere:
 _______________________________________________________________________________________________________________________________________
 
 Bewerten Sie auf einer Skala von 1 (sehr häufig) - 6(nie), welchen Kommunikationsweg Sie tatsächlich wie oft nutzen,
-um sich mit Dozenten auszutauschen?
+mit Dozenten zu kommunizieren?
 O Forum
 O Email
 O In der Vorlesung
 O Durch Aushang am Raum
 O Durch Aushang an einer zentralen Stelle
 O Im Einzelgespräch
+O Im Gruppengespräch
+O Chat
+O Telefon
 O andere:
 _______________________________________________________________________________________________________________________________________
 
 Bewerten Sie auf einer Skala von 1 (sehr) - 6(gar nicht), welchen Kommunikationsweg Sie bevorzugen, 
-um sich mit Kommilitonen auszutauschen?
+mit Kommilitonen zu kommunizieren?
 O Forum
 O Email
 O In der Vorlesung
 O Durch Aushang am Raum
 O Durch Aushang an zentraler Stelle
 O Im Einzelgespräch
+O Im Gruppengespräch
+O Chat
+O Telefon
 O andere:
 _______________________________________________________________________________________________________________________________________
 
@@ -97,9 +106,29 @@ Ordnen Sie jedem dieser Kommunikationswege eine Funktion zu:
 4 Durch Aushang am Raum
 5 Durch Aushang an einer zentralen Stelle
 6 Im Einzelgespräch
-7 andere: 
+7 Im Gruppengespräch
+8 Chat
+9 Telefon
+10 andere: 
 _______________________________________________________________________________________________________________________________________
-*Sammlung von Funktionen: Termine planen, Termine ändern, Lehrmaterial austeilen/erhalten, Leistungsbewertung, Übungen, Feedback zu Übungen, Feedback zum Lernfortschritt, Feedback zur Veranstaltung, Fragen zum Lehrmaterial, Diskussionen, Exkurse, Teamarbeiten abstimmen, Studiengang spezifische Produkte verwalten(Programmcode, Grafiken/Modelle, mathematische Formeln)* *Jeder Funktion kann eine oder mehrere Zahlen zugeordnet werden*
+
+(Jeder Funktion kann eine oder mehrere Zahlen zugeordnet werden)
+Funktionen | Nummer der Kommunikationswege | 
+:---|:--------------:|
+ Termine planen||  
+Termine ändern||
+Lehrmaterial austeilen/erhalten||
+Leistungsbewertung||	
+Übungen||	
+Feedback zu Übungen||	
+Feedback zum Lernfortschritt||	
+Feedback zur Veranstaltung||	
+Fragen zum Lehrmaterial||	
+Diskussionen||	
+Exkurse||	
+Teamarbeiten abstimmen||	
+Studiengang spezifische Produkte verwalten(Programmcode, Grafiken/Modelle, mathematische Formeln)||	
+
 
 Mit welchem dieser Kommunikationsbereiche sind Sie aktuell nicht zufrieden?
 O Forum
@@ -107,16 +136,25 @@ O Email
 O In der Vorlesung
 O Durch Aushang
 O Im Einzelgespräch
+O Im Gruppengespräch
+O Chat
+O Telefon
 O andere:
 _______________________________________________________________________________________________________________________________________ 
 Möchten Sie einige Probleme besonders hervorheben ? Was müsste sich ändern, um Sie zufrieden zu stellen ?
 _______________________________________________________________________________________________________________________________________
 
 Wie würden Sie gerne über Terminverlegungen informiert werden?
-O Email
 O Forum
-O Aushang
-O Messenger (WhatsApp/Facebook Gruppe)
+O Email
+O In der Vorlesung
+O Durch Aushang
+O Im Einzelgespräch
+O Im Gruppengespräch
+O Chat
+O Telefon
+O andere:
+_______________________________________________________________________________________________________________________________________ 
 
 Empfinden Sie einen Eintrag ins Forum für kurzfristige Nachrichten als aufwändig? Würden Sie die Funktion nutzen, wenn sie weniger 
 aufwändig wäre?
@@ -124,13 +162,6 @@ ________________________________________________________________________________
 
 Beschreiben Sie Stichwortartig häufige Probleme bei der Kommunikation von Terminänderungen: 
 _______________________________________________________________________________________________________________________________________
-
-Manche Studenten haben Zweifel am Datenschutz von Social Media, deswegen nutzen sie Facebook, Twitter etc. nicht. 
-Wie werden Sie solche Studenten erreichen oder persönlich kennenlernen?
-O Handy-Message oder Whatsapp reicht vollkommen aus. (Aber was wäre, wenn die Nummer gewechselt würde?)
-O Wenn seine/ihre Nummer gewechselt würde und mir niemand mitgeteilt hat, will ich nicht mit ihm/ihr persönlich kontaktieren. 
-(Aber was wäre, wenn es um unpersönliche Sache geht und du muss ihn/sie erreichen?)
-O Ich werde mich an_______________ wenden, um dieses Problem zu lösen, weil________________________
 
 =======================================================================================================================================
 
