--- a/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
+++ b/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
@@ -1,11 +1,11 @@
 I Allgemeine Fragen
 
 Welcher der folgenden Faktoren ist für Sie wesentlich in der Kommunikation zwischen Dozenten und Studenten ?
-O Vermittlung von Lehrinhalten
-O Planung
-O Führungsaufgaben
-O Leistungsbewertung
-O andere: __________________________________________________________________________________________________
+* Vermittlung von Lehrinhalten
+* Planung
+* Führungsaufgaben
+* Leistungsbewertung
+* andere: __________________________________________________________________________________________________
 
 Bewerten Sie auf einer Skala von 1 (sehr gut) - 6(mangelhaft), wie zufrieden Sie mit der aktuellen Kommunikation sind:
 O Vermittlung von Lehrinhalten
