--- a/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
+++ b/Arbeitsbereich/Fragenkatalog Moodle/in Arbeit/Zusammenfassung aller Fragen/120416_Fragenkatalog_0.1
@@ -8,10 +8,10 @@ Welcher der folgenden Faktoren ist für Sie wesentlich in der Kommunikation zwis
 * andere: __________________________________________________________________________________________________
 
 Bewerten Sie auf einer Skala von 1 (sehr gut) - 6(mangelhaft), wie zufrieden Sie mit der aktuellen Kommunikation sind:
-O Vermittlung von Lehrinhalten
-O Planung 
-O Führungsaufgabe
-O Leistungsbewertung
+* Vermittlung von Lehrinhalten
+* Planung 
+* Führungsaufgabe
+* Leistungsbewertung
 
 4. Wie oft kommunizieren Sie mit Dozenten?
 O 2 mal/Woche oder öfter   	  O ca. 1 mal pro Woche         	O 1-2 mal/Monat oder seltener
